--- a/JavaPractice/index.html
+++ b/JavaPractice/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>People entered:</h1>
-    <h2 id="count-el">0</h2>
-    <button id="increment-btn" onclick="increment()">increment</button>
-    <script>
-      scr = "index.js";
-    </script>
-  </body>
+  <html>
+    <head>
+      <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+      <h1>People entered:</h1>
+      <h2 id="count-el">0</h2>
+      <button id="increment-btn" onclick="increment()">INCREMENT</button>
+      <script src="index.js"></script>
+    </body>
+  </html>
 </html>
